--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ DB_NAME=midterm
 # Uncomment and set to true for Heroku
 # DB_SSL=true if heroku
 DB_PORT=5432
+
+ACCOUNT_SID=
+AUTH_TOKEN=
+PERSONAL_NUMBER=
+TWILLIO_NUMBER=
